--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="logo">
                         <i class="fas fa-box"></i>
                     </div>
-                    <span class="brand-text">EcoPack AI</span>
+                    <span class="brand-text"> AI</span>
                 </div>
                 <div class="nav-badge">
                     <i class="fas fa-globe"></i>
@@ -75,7 +75,7 @@
                     <!-- Trust Indicator -->
                     <div class="trust-indicator">
                         <i class="fas fa-recycle text-blue"></i>
-                        <span>100% Sustainable</span>
+                        <span>Sustainable</span>
                     </div>
                 </div>
 
